--- a/D_Accounting/MainWindow.xaml
+++ b/D_Accounting/MainWindow.xaml
@@ -15,7 +15,7 @@
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_File">
-                <MenuItem Header="_New"/>
+                <MenuItem Header="_New" Command="{Binding Source={StaticResource mMainViewModel}, Path=NewCommand}"/>
                 <MenuItem Header="_Load" Command="{Binding Source={StaticResource mMainViewModel}, Path=LoadCommand}"/>
                 <MenuItem Header="_Save" Command="{Binding Source={StaticResource mMainViewModel}, Path=SaveCommand}"/>
                 <MenuItem Click="Event_ClickMenuItem_ChangeDataFilePathDialog">
